Bilingual switcher: fix EN spacing, CN nav, CN sidebar bio

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -52,7 +52,7 @@
   white-space: nowrap;
 
   &--lg {
-    padding-right: 2em;
+    padding-right: 0;
     font-weight: 700;
   }
 }
